--- a/HTML/index.html
+++ b/HTML/index.html
@@ -70,10 +70,10 @@
                             <p class="promo-block-text">Web Developer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
-                            <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li>
-                            <li><a href="mailto:loic.jenard1@outlook.fr" class="social-icons"><i class="icon-envelope-letter"></i></a></li>
+                          <li><a href="https://twitter.com/Ahbahna" target="_blank" class="social-icons"><i class="icon-social-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/lo%C3%AFc-jenard/" target="_blank" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://github.com/IntLoic" target="_blank"class="social-icons"><i class="icon-social-github"></i></a></li>
+                            <li><a href="mailto:loic.jenard1@outlook.fr" target="_blank" class="social-icons"><i class="icon-envelope-letter"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -302,10 +302,10 @@
         <footer>
           <div class="belack row">
             <ul class="list-inline iconique col-lg-offset-5 col-lg-6 col-xs-12">
-                <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
-                <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
-                <li><a href="#" class="social-icons"><i class="icon-social-github"></i></a></li>
-                <li><a href="mailto:loic.jenard1@outlook.fr" class="social-icons"><i class="icon-envelope-letter"></i></a></li>
+              <li><a href="https://twitter.com/Ahbahna" target="_blank" class="social-icons"><i class="icon-social-twitter"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/lo%C3%AFc-jenard/" target="_blank" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+            <li><a href="https://github.com/IntLoic" target="_blank" class="social-icons"><i class="icon-social-github"></i></a></li>
+            <li><a href="mailto:loic.jenard1@outlook.fr" target="_blank" class="social-icons"><i class="icon-envelope-letter"></i></a></li>
             </ul>
           </div>
         </footer>
